--- a/sass/Global/BreadCrumns.sass
+++ b/sass/Global/BreadCrumns.sass
@@ -7,11 +7,12 @@
   display: flex
   justify-content: space-between
 
-.breadcrumbs__list li a
-  text-decoration: none
-  color: $text
-  margin-right: 8px
+.breadcrumbs__list li
+  a
+    text-decoration: none
+    color: $text
+    margin-right: 8px
 
-.breadcrumbs__list li span
-  color: $text
-  font-weight: bold
+  span
+    color: $text
+    font-weight: bold
