--- a/sass/main/DepositCalc/DepositCalc.sass
+++ b/sass/main/DepositCalc/DepositCalc.sass
@@ -1,3 +1,35 @@
-.deposit-form-wrapper
+.deposit-wrapper
     display: flex
     justify-content: center
+    flex-direction: column
+    align-items: center
+
+.DepositSum
+    input
+        height: 43px
+        margin-bottom: 8px
+        border: none
+        background-color: #2336A5
+        color: white
+        font-size: 14px
+        padding-left: 40px
+        display: block
+        width: 400px
+        border-radius: 12px
+        &:hover
+            border: none
+
+.DepositPercent
+    input
+        height: 43px
+        margin-bottom: 8px
+        border: none
+        background-color: #2336A5
+        color: white
+        font-size: 14px
+        padding-left: 40px
+        display: block
+        width: 400px
+        border-radius: 12px
+        &:hover
+            border: none
