--- a/sass/Global/advertisement.sass
+++ b/sass/Global/advertisement.sass
@@ -13,9 +13,9 @@
     font-size: 36px
     background-color: inherit
 
-.advertisement-text
-    color: yellow
-    text-align: center
+    &-text
+        color: yellow
+        text-align: center
 
 .advertisement::after
     content: ''
