--- a/sass/Global/global.sass
+++ b/sass/Global/global.sass
@@ -26,11 +26,10 @@ body
   z-index: -8
 
 .title-main-middle
-  width: 1200px
   font-size: 36px
   font-weight: 300
   word-break: break-word
-  color: darkyellow
+  color: #2336A5
   margin: 0 auto
   text-align: center
   padding-top: 20px
