start SOS and del deposit calc

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,10 +5,6 @@
 @import "main/articles"
 @import "main/games"
 @import "main/reviews"
-@import "main/DepositCalc/DepositTimeRange"
-@import "main/DepositCalc/DepositCalc"
-@import "main/DepositCalc/button-payment"
-@import "main/DepositCalc/depositResult"
 @import "main/slider2"
 @import "article/PackOfMoney"
 @import "article/ArticleContent"
@@ -32,3 +28,4 @@
 @import "Global/advertisement"
 @import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
 @import "../app/TicTacToe/sass/TicTacToe"
+@import "../figma/SOS/sass/sectionOne"
