--- a/css/style.css
+++ b/css/style.css
@@ -1984,4 +1984,12 @@ html:hover .spider {
   color: #BD022F;
 }
 
+.SectionOne {
+  min-height: 1000px;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: cover;
+}
+
 /*# sourceMappingURL=style.css.map */
