add background sections

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,3 +29,6 @@
 @import "../app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS"
 @import "../app/TicTacToe/sass/TicTacToe"
 @import "../figma/SOS/sass/sectionOne"
+@import "../figma/SOS/sass/sectionTwo"
+@import "../figma/SOS/sass/sectionThree"
+@import "../figma/SOS/sass/sectionFour"
