--- a/css/style.css
+++ b/css/style.css
@@ -2130,4 +2130,51 @@ html:hover .spider {
   left: 42%;
 }
 
+.SectionTwo {
+  min-weight: 1000px;
+  min-height: 1100px;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+}
+.SectionTwo .h1up {
+  position: absolute;
+  color: white;
+  text-transform: uppercase;
+  top: 256px;
+  left: 122px;
+  font-size: 24px;
+}
+.SectionTwo .h1Main {
+  position: absolute;
+  color: white;
+  text-transform: uppercase;
+  font-size: 80px;
+  top: 293px;
+  left: 120px;
+  line-height: 82px;
+}
+
+.SectionThree {
+  min-weight: 1000px;
+  min-height: 880px;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+}
+
+.SectionFour {
+  min-weight: 1000px;
+  min-height: 880px;
+  background-repeat: no-repeat;
+  display: block;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+}
+
 /*# sourceMappingURL=style.css.map */
