--- a/css/style.css
+++ b/css/style.css
@@ -2151,10 +2151,11 @@ html:hover .spider {
   position: absolute;
   color: white;
   text-transform: uppercase;
-  font-size: 80px;
+  font-size: 50px;
   top: 293px;
   left: 120px;
-  line-height: 82px;
+  line-height: 52px;
+  width: 520px;
 }
 
 .SectionThree {
