--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -19,7 +19,8 @@
         position: absolute
         color: white
         text-transform: uppercase
-        font-size: 80px
+        font-size: 50px
         top: 293px
         left: 120px
-        line-height: 82px
+        line-height: 52px
+        width: 520px
