--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -6,3 +6,51 @@
     background-position: center
     background-size: contain
     position: relative
+
+.s4-h1up-text
+    position: absolute
+    color: white
+    text-transform: uppercase
+    top: 145px
+    left: 570px
+    font-size: 24px
+    line-height: 24px
+    font-family: Bebas Neue
+
+.s4-h1main-text
+    position: absolute
+    color: white
+    text-transform: uppercase
+    top: 182px
+    left: 419px
+    font-size: 60px
+    font-family: Bebas Neue
+
+.table-os
+    position: relative
+    top: 390px
+    left: 122px
+    width: 267px
+    height: 120px
+    border: yellow 1px solid
+
+    &-os
+        color: #FFB548
+        text-transform: uppercase
+        font-weight: 700
+        margin-top: 10px
+        margin-left: 20px
+
+    &-text
+        color: white
+        margin-top: 10px
+        margin-left: 20px
+        font-weight: 400
+        font-size: 18px
+        line-height: 22px
+
+.table-os-processor
+    position: relative
+    display: inline
+    top: 390px
+    left: 389px
