--- a/figma/SOS/sass/sectionThree.sass
+++ b/figma/SOS/sass/sectionThree.sass
@@ -6,3 +6,25 @@
     background-position: center
     background-size: contain
     position: relative
+
+.S3-h1up-text
+    position: absolute
+    color: white
+    text-transform: uppercase
+    top: 169px
+    left: 800px
+    font-family: Bebas Neue
+    font-weight: 700
+    font-size: 24px
+    line-height: 24px
+
+.S3-h1main-text
+    position: absolute
+    color: white
+    text-transform: uppercase
+    top: 208px
+    left: 800px
+    font-family: Bebas Neue
+    font-weight: 700
+    font-size: 80px
+    font-style: normal
