--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -14,6 +14,7 @@
         top: 256px
         left: 122px
         font-size: 24px
+        font-family: Bebas Neue
 
     .h1Main
         position: absolute
@@ -22,5 +23,20 @@
         font-size: 50px
         top: 293px
         left: 120px
-        line-height: 52px
-        width: 520px
+        line-height: 80px
+        width: 600px
+        font-weight: 700
+        font-size: 60px
+        font-family: Bebas Neue
+
+    .textSectionTwo
+        position: absolute
+        color: white
+        top: 520px
+        left: 310px
+        font-size: 18px
+        width: 360px
+        text-align: justify
+        font-weight: 400
+        line-height: 22px
+        font-family: Open Sans
