--- a/sass/style.sass
+++ b/sass/style.sass
@@ -32,3 +32,5 @@
 @import "../figma/SOS/sass/sectionTwo"
 @import "../figma/SOS/sass/sectionThree"
 @import "../figma/SOS/sass/sectionFour"
+@import "../figma/SOS/sass/sectionFive"
+@import "../figma/SOS/sass/sectionSix"
