--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -6,3 +6,33 @@
     background-position: center
     background-size: contain
     position: relative
+
+.s5h1-up
+    position: absolute
+    top: 304px
+    left: 121px
+    color: white
+    font-weight: 700
+    font-size: 24px
+    line-height: 24px
+
+.s5h1-main
+    position: absolute
+    top: 340px
+    left: 119px
+    color: white
+    font-weight: 700
+    text-transform: uppercase
+    font-size: 80px
+    line-height: 80px
+
+.s5h1-text
+    position: absolute
+    top: 457px
+    left: 120px
+    color: white
+    width: 430px
+    font-size: 18px
+    font-weight: 400
+    line-height: 22px
+    font-family: Open Sans
