--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -36,3 +36,19 @@
     font-weight: 400
     line-height: 22px
     font-family: Open Sans
+
+.Read-more
+    position: absolute
+    top: 630px
+    left: 124px
+    width: 260px
+    height: 60px
+    background: linear-gradient(#FFB548, #F3AF34)
+    border-radius: 4px
+
+    &-text
+        color: black
+        font-weight: 700
+        font-size: 16px
+        line-height: 22px
+        font-family: Open Sans
