--- a/sass/Global/header/popap-enter.sass
+++ b/sass/Global/header/popap-enter.sass
@@ -29,7 +29,7 @@ label
         color: white
         left: 18px
 
-input
+/** input
     height: 43px
     margin-bottom: 8px
     border: none
@@ -41,7 +41,7 @@ input
     width: 100%
 
     &::placeholder
-        color: white
+        color: white **/
 
 .popap-button
     margin: 19px 30%
