--- a/css/style.css
+++ b/css/style.css
@@ -1467,21 +1467,19 @@ label::before {
   left: 18px;
 }
 
-input {
-  height: 43px;
-  margin-bottom: 8px;
-  border: none;
-  background-color: #76ae36;
-  color: white;
-  font-size: 14px;
-  padding-left: 40px;
-  display: block;
-  width: 100%;
-}
-input::placeholder {
-  color: white;
-}
-
+/** input
+ *  height: 43px
+ *  margin-bottom: 8px
+ *  border: none
+ *  background-color: #76ae36
+ *  color: white
+ *  font-size: 14px
+ *  padding-left: 40px
+ *  display: block
+ *  width: 100%
+ *
+ *  &::placeholder
+ *      color: white **/
 .popap-button {
   margin: 19px 30%;
   padding: 18px 16px;
@@ -2397,6 +2395,15 @@ html:hover .spider {
   font-weight: 400;
   line-height: 19px;
   color: #FFFFFF;
+}
+.email-email .field-email {
+  color: red;
+  background-color: transparent;
+  border: none;
+  font-weight: 400;
+  font-size: 18px;
+  font-family: Open Sans;
+  margin-left: 21px;
 }
 
 .button-subscribe {
