--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -61,6 +61,17 @@
         line-height: 19px
         color: #FFFFFF
 
+    &-email
+        .field-email
+            color: #FFB548
+
+            background-color: transparent
+            border: none
+            font-weight: 400
+            font-size: 18px
+            font-family: Open Sans
+            margin-left: 21px
+
 .button-subscribe
     position: absolute
     top: 511px
