--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -45,6 +45,7 @@
     height: 60px
     background: linear-gradient(#FFB548, #F3AF34)
     border-radius: 4px
+    cursor: pointer
 
     &-text
         color: black
