--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -95,6 +95,7 @@
     height: 60px
     background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%)
     border-radius: 4px
+    cursor: pointer
 
     &-left
         position: absolute
