--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -64,13 +64,19 @@
     &-email
         .field-email
             color: #FFB548
-
             background-color: transparent
             border: none
             font-weight: 400
             font-size: 18px
             font-family: Open Sans
             margin-left: 21px
+            cursor: pointer
+
+            &::placeholder
+                color: #FFB548
+
+            &:focus
+                outline: none
 
 .button-subscribe
     position: absolute
@@ -80,6 +86,7 @@
     height: 60px
     background: linear-gradient(#FFB548, #F3AF34)
     border-radius: 4px
+    cursor: pointer
 
     &-text
         font-size: 16px
