--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -125,6 +125,7 @@
     margin: 0 auto
     margin-top: 570px
     margin-button: 20px
+    cursor: pointer
 
     &-text
         font-family: OpenSans
