--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -53,3 +53,27 @@
         font-size: 16px
         line-height: 22px
         font-family: Open Sans
+
+.reviews
+    width: 453px
+    height: 183px
+    background-color: #1a1a1b
+    border-radius: 10px
+
+    &-name
+        color: #FFB548
+        text-transform: uppercase
+        font-weight: 700
+        font-size: 24px
+        line-height: 24px
+        margin-left: 109px
+        margin-top: 26px
+
+    &-date
+        margin-left: 16px
+        margin-top: 141px
+
+.evan
+    position: absolute
+    top: 160px
+    left: 870px
