--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -25,6 +25,7 @@
     text-transform: uppercase
     font-size: 80px
     line-height: 80px
+    letter-spacing: 3px
 
 .s5h1-text
     position: absolute
@@ -68,6 +69,7 @@
         line-height: 24px
         margin-left: 109px
         margin-top: 26px
+        letter-spacing: 2px
 
     &-date
         margin-left: 16px
