--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -55,25 +55,64 @@
         line-height: 22px
         font-family: Open Sans
 
-.reviews
+.reviewsSOS
+    position: relative
     width: 453px
     height: 183px
     background-color: #1a1a1b
     border-radius: 10px
 
     &-name
+        position: absolute
         color: #FFB548
         text-transform: uppercase
         font-weight: 700
         font-size: 24px
         line-height: 24px
-        margin-left: 109px
-        margin-top: 26px
+        left: 109px
+        top: 26px
         letter-spacing: 2px
+
+    &-subname
+        position: absolute
+        top: 47px
+        left: 109px
+        color: #5d5d5e
+
+    &-img
+        position: absolute
+        top: 11px
+        left: 12px
+        img
+            width: 66px
+            height: 66px
+            border-radius: 50%
+
+    &-yellowCircle
+        position: absolute
+        top: 11px
+        left: 12px
+        width: 66px
+        height: 66px
+        background-color: #FFB548
+        border-radius: 50%
+        z-index: -1
+
+    &-social
+        position: absolute
+        top: 30px
+        left: 414px
+
+    &-text
+        position: absolute
+        top: 103px
+        left: 16px
+        color: white
 
     &-date
         margin-left: 16px
         margin-top: 141px
+        color: #5d5d5e
 
 .evan
     position: absolute
