--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -61,6 +61,7 @@
     height: 183px
     background-color: #1a1a1b
     border-radius: 10px
+    cursor: pointer
 
     &-name
         position: absolute
