--- a/css/style.css
+++ b/css/style.css
@@ -2340,6 +2340,9 @@ html:hover .spider {
   border-radius: 10px;
   cursor: pointer;
 }
+.reviewsSOS:hover .reviewsSOS-yellowCircle {
+  transform: translate(8px, 4px);
+}
 .reviewsSOS-name {
   position: absolute;
   color: #FFB548;
@@ -2361,6 +2364,7 @@ html:hover .spider {
   position: absolute;
   top: 11px;
   left: 12px;
+  z-index: 1;
 }
 .reviewsSOS-img img {
   width: 66px;
@@ -2375,7 +2379,7 @@ html:hover .spider {
   height: 66px;
   background-color: #FFB548;
   border-radius: 50%;
-  z-index: -1;
+  transition: 0.5s;
 }
 .reviewsSOS-social {
   position: absolute;
