--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -63,6 +63,9 @@
     border-radius: 10px
     cursor: pointer
 
+    &:hover .reviewsSOS-yellowCircle
+        transform: translate(8px, 4px)
+
     &-name
         position: absolute
         color: #FFB548
@@ -84,6 +87,7 @@
         position: absolute
         top: 11px
         left: 12px
+        z-index: 1
         img
             width: 66px
             height: 66px
@@ -97,7 +101,7 @@
         height: 66px
         background-color: #FFB548
         border-radius: 50%
-        z-index: -1
+        transition: 0.5s
 
     &-social
         position: absolute
