--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -97,6 +97,9 @@
     border-radius: 4px
     cursor: pointer
 
+    &:hover
+        background: linear-gradient(#fc9804, #d39013)
+
     &-left
         position: absolute
         left: 16.39px
