--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -88,6 +88,9 @@
     border-radius: 4px
     cursor: pointer
 
+    &:hover
+        background: linear-gradient(#fc9804, #d39013)
+
     &-text
         font-size: 16px
         font-weight: 700
