--- a/figma/SOS/sass/sectionFour.sass
+++ b/figma/SOS/sass/sectionFour.sass
@@ -48,31 +48,34 @@
 
     &-os
         position: absolute
-        top: 388px
+        top: 368px
         left: 221px
 
     &-processor
         position: absolute
-        top: 388px
+        top: 368px
         left: 487px
 
     &-memory
         position: absolute
-        top: 507px
+        top: 487px
         left: 221px
 
     &-storage
         position: absolute
-        top: 507px
+        top: 487px
         left: 487px
 
 .table2
     position: absolute
-    top: 626px
+    top: 606px
     left: 221px
     width: 533px
-    height: 150px
+    height: 170px
     border-left: 1px solid rgba(151, 151, 151, 0.2)
+
+    .table-name
+        margin-top: 20px
 
 .line1
     border-top: 1px solid rgba(151, 151, 151, 0.2)
@@ -121,7 +124,7 @@
 
 .line7
     border-right: 1px solid rgba(151, 151, 151, 0.2)
-    height: 137px
+    height: 157px
     position: absolute
-    top: 626px
+    top: 606px
     left: 753px
