--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -40,3 +40,29 @@
         font-weight: 400
         line-height: 22px
         font-family: Open Sans
+
+.photo1
+    position: absolute
+    top: 190px
+    left: 770px
+    z-index: 3
+    img
+        width: 490px
+        height: 600px
+
+.photo2
+    position: absolute
+    top: 210px
+    left: 880px
+    z-index: 2
+    img
+        width: 450px
+        height: 550px
+
+.photo3
+    position: absolute
+    top: 230px
+    left: 1000px
+    img
+        width: 400px
+        height: 500px
