--- a/css/style.css
+++ b/css/style.css
@@ -2088,6 +2088,7 @@ html:hover .spider {
 }
 .button-yellow:hover {
   background: linear-gradient(#fc9804, #d39013);
+  border: 1.5px solid darkred;
 }
 .button-yellow-left {
   position: absolute;
@@ -2207,6 +2208,66 @@ html:hover .spider {
 .photo3 img {
   width: 400px;
   height: 500px;
+}
+
+.point1 {
+  position: absolute;
+  top: 750px;
+  left: 870px;
+  width: 14px;
+  height: 14px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: 4;
+}
+
+.point2 {
+  position: absolute;
+  top: 750px;
+  left: 945px;
+  width: 14px;
+  height: 14px;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: 4;
+}
+
+.point3 {
+  position: absolute;
+  top: 750px;
+  left: 1020px;
+  width: 14px;
+  height: 14px;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: 4;
+}
+
+.point4 {
+  position: absolute;
+  top: 750px;
+  left: 1095px;
+  width: 14px;
+  height: 14px;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: 4;
+}
+
+.point5 {
+  position: absolute;
+  top: 750px;
+  left: 1170px;
+  width: 14px;
+  height: 14px;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: 4;
 }
 
 .SectionThree {
@@ -2503,6 +2564,7 @@ html:hover .spider {
 }
 .Read-more:hover {
   background: linear-gradient(#fc9804, #d39013);
+  border: 1.5px solid darkred;
 }
 .Read-more-text {
   color: black;
@@ -2709,6 +2771,7 @@ html:hover .spider {
 }
 .button-subscribe:hover {
   background: linear-gradient(#fc9804, #d39013);
+  border: 1.5px solid darkred;
 }
 .button-subscribe-text {
   font-size: 16px;
