--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -99,6 +99,7 @@
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
+        border: 1.5px solid darkred
 
     &-left
         position: absolute
