--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -90,6 +90,7 @@
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
+        border: 1.5px solid darkred
 
     &-text
         font-size: 16px
