--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -66,3 +66,58 @@
     img
         width: 400px
         height: 500px
+
+.point1
+    position: absolute
+    top: 750px
+    left: 870px
+    width: 14px
+    height: 14px
+    background-color: white
+    border: 1px solid white
+    border-radius: 50%
+    z-index: 4
+
+.point2
+    position: absolute
+    top: 750px
+    left: 945px
+    width: 14px
+    height: 14px
+    background-color: transparent
+    border: 1px solid white
+    border-radius: 50%
+    z-index: 4
+
+.point3
+    position: absolute
+    top: 750px
+    left: 1020px
+    width: 14px
+    height: 14px
+    background-color: transparent
+    border: 1px solid white
+    border-radius: 50%
+    z-index: 4
+
+.point4
+    position: absolute
+    top: 750px
+    left: 1095px
+    width: 14px
+    height: 14px
+    background-color: transparent
+    border: 1px solid white
+    border-radius: 50%
+    z-index: 4
+
+.point5
+    position: absolute
+    top: 750px
+    left: 1170px
+    width: 14px
+    height: 14px
+    background-color: transparent
+    border: 1px solid white
+    border-radius: 50%
+    z-index: 4
