--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -51,6 +51,7 @@
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
+        border: 1.5px solid darkred
 
     &-text
         color: black
